feat: melhorias na formatacao